tests/typing/good/testfile-block-6.scala

class C() { var x : Unit = { var y = 2 } }
object Main { def main(args: Array[String]) { } }
