tests/typing/bad/testfile-extends-3.scala

class C extends Unit {}
object Main { def main(args: Array[String]) { } }
